--- a/designesapp/templates/index.html
+++ b/designesapp/templates/index.html
@@ -63,7 +63,7 @@
           <!-- ======================================================Nav bar end================================================================ -->
 
           <!-- =========================================================slider start============================================================ -->
-          <div class="row mt-3">
+          <div class="row mt-3 py-3">
             <div class="col-md-1"></div>
             <div class="col-md-6 m-auto slidecontent">
               <span class="fs-1 fw-bold">Better Solutions For Your <br> Work</span>
@@ -71,7 +71,7 @@
               <button class="rounded-pill  p-3 mt-1 fw-bold">Get Started</button>
             </div>
             <div class="col-md-5 m-auto">
-              <img src="{% static 'images/slide.png' %}" width="100%" alt="Please wait it takes some time">
+              <img src="{% static 'images/slide.png' %}" width="90%" alt="Please wait it takes some time">
             </div>
           </div>
 
@@ -81,142 +81,210 @@
       </div>
     </div>
 
-      <!-- =======================================================About Start================================================================== -->
+    <!-- =======================================================About Start================================================================== -->
 
-      <div class="row mt-5">
-        <div class="container" id="aboutt">
-          <div class="row about">
-            <div class="col-md-5"></div>
-            <div class="col-md-2 text-center">
-              <h1>
-                ABOUT US
-              </h1>
-            </div>
-            <div class="col-md-5"></div>
+    <div class="row mt-5">
+      <div class="container" id="aboutt">
+        <div class="row about">
+          <div class="col-md-5"></div>
+          <div class="col-md-2 text-center">
+            <h1>
+              ABOUT US
+            </h1>
           </div>
-          <div class="container">
-            <div class="row about1 m-4">
-              <div class="row">
-                <div class="col-md-6">
-                  <p>
-                    Welcome to <strong>Design Exhibition Space </strong> – your one-stop destination for beautifully
-                    crafted
-                    <strong>portfolio</strong>, <strong>resume</strong>, and <strong>digital card templates</strong>.
-                    Whether you're a creative professional, a job seeker, or someone looking to make a lasting
-                    impression,
-                    our collection of modern, customizable designs has you covered.
-                  </p>
-                  <p>
-                    At Design Exhibition Space, we believe that great design should be accessible to everyone. Our
-                    mission
-                    is to
-                    empower users to present their skills and stories in the most impactful way possible, without
-                    needing
-                    advanced technical knowledge.
-                  </p>
-                </div>
-                <div class="col-md-6">
-                  <p>
-                    Our platform is built using the latest technologies including
-                    <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and
-                    <strong>Python</strong>,
-                    ensuring a seamless, fast, and user-friendly experience.
-                  </p>
-                  <p>
-                    We provides differents types of templatesof portfolio and resumes. Whether you want to build a sleek
-                    portfolio, a standout resume, or an eye-catching digital card – we've got you covered.
-                  </p>
-
-                  <button class="rounded-1  py-2 px-5 mt-1 fw-bold">Read More</button>
-                </div>
-
-              </div>
-            </div>
-          </div>
+          <div class="col-md-5"></div>
         </div>
-      </div>
-
-      <!-- =========================================================About end================================================================== -->
-
-      <!-- ============================================================services ================================================================= -->
-
-      <div class="row" id="service">
-        <div class="container-fluid">
-          <div class="row" style="justify-content: center;">
-            <div class="card" style="width: 18rem;">
-              <div class="card-body">
-                <h3 class="card-title">Portfolio</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                <button class="rounded-pill p-2">
-                  <a href="#" class="card-link">Read more</a>
-                </button>
-              </div>
-            </div>
-            <div class="card ms-5" style="width: 18rem;">
-              <div class="card-body">
-                <h3 class="card-title">Resumes</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                <button class="rounded-pill p-2">
-                  <a href="#" class="card-link">Read more</a>
-                </button>
-              </div>
-            </div>
-            <div class="card ms-5" style="width: 18rem;">
-              <div class="card-body">
-                <h3 class="card-title">Card</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                <button class="rounded-pill p-2">
-                  <a href="#" class="card-link">Read more</a>
-                </button>
-              </div>
-            </div> 
-          </div>
-        </div>
-      </div>
-
-      <!-- ===============================================================services end========================================================== -->
-
-      <!-- ===========================================================portfolio start===================================================== -->
-
-      <div class="row">
         <div class="container">
-          <div class="row">
-            <div class="col-md-6 mt-5">
-              <img src="{% static 'images/portfolio4.jpg' %}" width="100%" alt="">
-            </div>
-            <div class="col-md-6">
-              <div class="row mt-5">
-                <div class="col-md-6">
-                  <img src="{% static 'images/portfolio1.jpg' %}" width="100%" alt="">
-                </div>
-                <div class="col-md-6">
-                  <img src="{% static 'images/portfolio2.jpg' %}" width="100%" alt="">
-                </div>
+          <div class="row about1 m-4">
+            <div class="row">
+              <div class="col-md-6">
+                <p>
+                  Welcome to <strong>Design Exhibition Space </strong> – your one-stop destination for beautifully
+                  crafted
+                  <strong>portfolio</strong>, <strong>resume</strong>, and <strong>digital card templates</strong>.
+                  Whether you're a creative professional, a job seeker, or someone looking to make a lasting
+                  impression,
+                  our collection of modern, customizable designs has you covered.
+                </p>
+                <p>
+                  At Design Exhibition Space, we believe that great design should be accessible to everyone. Our
+                  mission
+                  is to
+                  empower users to present their skills and stories in the most impactful way possible, without
+                  needing
+                  advanced technical knowledge.
+                </p>
               </div>
-              <div class="row mt-5">
-                <div class="col-md-6">
-                  <img src="{% static 'images/portfolio3.jpg' %}" width="100%" alt="">
-                </div>
-                <div class="col-md-6">
-                  <img src="{% static 'images/portfolio4.jpg' %}" width="100%" alt="">
-                </div>
+              <div class="col-md-6">
+                <p>
+                  Our platform is built using the latest technologies including
+                  <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and
+                  <strong>Python</strong>,
+                  ensuring a seamless, fast, and user-friendly experience.
+                </p>
+                <p>
+                  We provides differents types of templatesof portfolio and resumes. Whether you want to build a sleek
+                  portfolio, a standout resume, or an eye-catching digital card – we've got you covered.
+                </p>
+
+                <button class="rounded-1  py-2 px-5 mt-1 fw-bold">Read More</button>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- =========================================================About end================================================================== -->
+
+    <!-- ============================================================services ================================================================= -->
+
+    <div class="row" id="service">
+      <div class="container-fluid">
+        <div class="row about mt-5">
+          <div class="col-md-5"></div>
+          <div class="col-md-2 text-center">
+            <h1>
+              SERVICES
+            </h1>
+          </div>
+          <div class="col-md-5"></div>
+        </div>
+        <div class="row mt-4" style="justify-content: center;">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h3 class="card-title">Portfolio</h3>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+                content.</p>
+              <button class="rounded-pill p-2">
+                <a href="#" class="card-link">Read more</a>
+              </button>
+            </div>
+          </div>
+          <div class="card ms-5" style="width: 18rem;">
+            <div class="card-body">
+              <h3 class="card-title">Resumes</h3>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+                content.</p>
+              <button class="rounded-pill p-2">
+                <a href="#" class="card-link">Read more</a>
+              </button>
+            </div>
+          </div>
+          <div class="card ms-5" style="width: 18rem;">
+            <div class="card-body">
+              <h3 class="card-title">Card</h3>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+                content.</p>
+              <button class="rounded-pill p-2">
+                <a href="#" class="card-link">Read more</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ===============================================================services end========================================================== -->
+
+    <!-- ===========================================================portfolio start===================================================== -->
+
+    <div class="row">
+      <div class="container">
+        <div class="row portfolio">
+          <div class="col-md-6 mt-5">
+            <img src="{% static 'images/portfolio4.jpg' %}" width="100%" alt="">
+          </div>
+          <div class="col-md-6">
+            <div class="row mt-5">
+              <div class="col-md-6">
+                <img src="{% static 'images/portfolio1.jpg' %}" width="100%" alt="">
+              </div>
+              <div class="col-md-6">
+                <img src="{% static 'images/portfolio2.jpg' %}" width="100%" alt="">
+              </div>
+            </div>
+            <div class="row mt-2">
+              <div class="col-md-6">
+                <img src="{% static 'images/portfolio3.jpg' %}" width="100%" alt="">
+              </div>
+              <div class="col-md-6">
+                <img src="{% static 'images/portfolio4.jpg' %}" width="100%" alt="">
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <!-- ============================================================portfolio end====================================================== -->
+    <div class="row mt-5">
+      <div class="container">
+        <div class="row portfolio">
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-6">
+                <img src="{% static 'images/portfolio1.jpg' %}" width="100%" alt="">
+              </div>
+              <div class="col-md-6">
+                <img src="{% static 'images/portfolio2.jpg' %}" width="100%" alt="">
+              </div>
+            </div>
+            <div class="row mt-2">
+              <div class="col-md-6">
+                <img src="{% static 'images/portfolio3.jpg' %}" width="100%" alt="">
+              </div>
+              <div class="col-md-6">
+                <img src="{% static 'images/portfolio4.jpg' %}" width="100%" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="{% static 'images/portfolio3.jpg' %}" width="100%" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
 
-      <!-- ========================================================Login start================================================================ -->
+    <!-- ============================================================portfolio end====================================================== -->
+
+    <!-- ========================================================Login start================================================================ -->
+   
+     <div class="container mt-5">
+      <div class="row" id="login">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+         <div class="form1 py-4">
+           <div class="text-center"><h1 class="mt-3">LOGIN</h1></div>
+           <form class="m-4" id="form" data-aos="fade-down">       
+            <div class="mb-3  fw-bold fs-5">
+              <label for="email" class="form-label"> Email Address :</label>
+              <input type="email" placeholder="Email" class="form-control" id="email" aria-describedby="emailHelp" required onkeyup="mail()">
+            </div>
+            <div class="mb-3  fw-bold fs-5">
+              <label for="password" class="form-label"> Password :</label>
+              <input type="password" placeholder="Password" class="form-control" id="password" required onkeyup="mail()">
+            </div>
+            <div class="row">
+              <div class="col-md-8">
+              <span>Do you Have An Account?<a  class="fw-bold"  href="{% url 'createaccount' %}">Create Account</a></span>
+              </div>
+              <div class="col-md-4 text-end">
+                <span class="fw-bold" id="fp">Forgate Password</span>
+              </div>
+            </div>
+            <button type="submit" class="btn rounded-pill mt-5 px-4 fw-bold">Sign Up</button>
+          </form>
+        </div>
+         </div>
+      </div>
+    </div>
+
+    <!-- =============================================================login end=============================================================== -->
 
 
-
-      <!-- =============================================================login end=============================================================== -->
-
-
-      <!-- ==============================================================footer start====================================================== -->
-     <div class="row mt-5 footer py-5">
+    <!-- ==============================================================footer start====================================================== -->
+    <div class="row mt-5 footer py-5">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-1"></div>
@@ -226,14 +294,16 @@
           <div class="col-md-3 mt-3">
             <h5 class="ms-4">Quick Access</h5>
             <ul>
-              <li><a href="{% url 'index' %}">
-                  <img src="{% static 'images/arrow.gif' %}" width="7%" alt="">Home</a></li>
-              <li><a href="#aboutt">
-                  <img src="{% static 'images/arrow.gif' %}" width="7%" alt="">About</a></li>
-              <li><a href="">
-                  <img src="{% static 'images/arrow.gif' %}" width="7%" alt="">Services</a></li>
-              <li><a href="">
-                  <img src="{% static 'images/arrow.gif' %}" width="7%" alt="">Login</a></li>
+              <li class="mt-1"><a href="{% url 'index' %}">
+                <img src="{% static 'images/arrow.gif' %}" width="7%" alt="">Home</a></li>
+              <li class="mt-1"><a href="#aboutt">
+                <img src="{% static 'images/arrow.gif' %}" width="7%" alt="">About</a></li>
+              <li class="mt-1"><a href="#service">
+                <img src="{% static 'images/arrow.gif' %}" width="7%" alt="">Services</a></li>
+              <li class="mt-1"><a href="#login">
+                <img src="{% static 'images/arrow.gif' %}" width="7%" alt="">Login</a></li>
+              <li class="mt-1"><a href="{% url 'createaccount' %}">
+                <img src="{% static 'images/arrow.gif' %}" width="7%" alt="">Create Account?</a></li>
             </ul>
           </div>
           <div class="col-md-3 mt-3">
@@ -248,20 +318,20 @@
           <div class="col-md-1"></div>
         </div>
       </div>
-     </div>
-      <div class="row copyright">
-        <div class="container-fluid">
-          <div class="row text-center">
-            <div class="col-md-12 fw-bold">
-              <span>© Copyright Design Exhibition Space All Rights Reserved</span>
-            </div>
+    </div>
+    <div class="row copyright">
+      <div class="container-fluid">
+        <div class="row text-center">
+          <div class="col-md-12 fw-bold">
+            <span>© Copyright Design Exhibition Space All Rights Reserved</span>
           </div>
         </div>
       </div>
+    </div>
 
-      <!-- ===============================================================footer end===================================================== -->
-
+    <!-- ===============================================================footer end===================================================== -->
   </div>
+  <script src="{% static 'js/index.js' %}"></script>
   <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
