--- a/designesapp/templates/index.html
+++ b/designesapp/templates/index.html
@@ -71,7 +71,7 @@
               <button class="rounded-pill  p-3 mt-1 fw-bold">Get Started</button>
             </div>
             <div class="col-md-5 m-auto">
-              <img src="{% static 'images/slide.png' %}" width="90%" alt="Please wait it takes some time">
+              <img src="{% static 'images/slide.png' %}" width="90%" alt="Please wait it takes some time" class="bounce">
             </div>
           </div>
 
