--- a/designesapp/static/css/index.css
+++ b/designesapp/static/css/index.css
@@ -37,6 +37,33 @@
     color: whitesmoke;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.slidecontent button:hover {
+    background-color: #c0dcea;
+    color: #37517e;
+    font-family: 'Times New Roman', Times, serif;
+    padding: 8%;
+}
+
+.bounce {
+  width: 90%;
+  animation: bounce 2s infinite;
+  display: inline-block;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(-30px);
+  }
+
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
 /*================================nav and slide end==========*/
 
 /*=====================about star============================*/
@@ -148,6 +175,15 @@
     box-shadow: 0px 5px 7px #8cafeb;
     transform: scale(1.10);
     transition: 1s;
+}
+
+.card:hover {
+  animation: bounce 0.6s;
+}
+
+@keyframes bounce {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-10px); }
 }
 
 /* ===================services end========================= */
