--- a/designesapp/templates/createaccount.html
+++ b/designesapp/templates/createaccount.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <div class="container mt-5">
+            <div class="container mt-3">
                 <div class="row">
                     <div class="col-md-1"></div>
                     <div class="col-md-10">
@@ -94,35 +94,23 @@
                                             <input type="name" placeholder="Full Name" class="form-control" required
                                                 id="name" onkeyup="fname()">
                                         </div>
-                                        <div class="mb-1  fw-bold fs-5">
-                                            <label for="gender" class="form-label">Gender:</label>
-                                            <input type="radio" class="r1 m-2" name="r1" id="rd1"
-                                                style="box-shadow: none;">Male
-                                            <input type="radio" class="r1 m-2" name="r1" id="rd2"
-                                                style="box-shadow: none;">Female
-                                            <input type="radio" class="r1 m-2" name="r1" id="rd3"
-                                                style="box-shadow: none;">Others
+                                        <div class="mb-3  fw-bold fs-5">
+                                            <label for="email" class="form-label"> Email Address :</label>
+                                            <input type="email" placeholder="Email" class="form-control" id="email" aria-describedby="emailHelp" required
+                                                onkeyup="mail()">
                                         </div>
                                         <div class="mb-1  fw-bold fs-5">
                                             <label for="number" class="form-label">Contact Number:</label>
-                                            <input type="number" placeholder="Mobile Number" class="form-control"
+                                            <input type="text" placeholder="Mobile Number" class="form-control"
                                                 id="number" onkeyup="contact()">
                                             <br />
                                         </div>
                                         <div class="mb-3  fw-bold fs-5">
-                                            <label for="otp" class="form-label"> Enter OTP :</label>
-                                            <input type="text" placeholder="OTP" class="form-control" id="otp" required>
+                                            <label for="name" class="form-label"> Create Password :</label>
+                                            <input type="password" id="pass" placeholder="Create Password" class="form-control" onkeyup="pas()">
+		                                    <span id="sp2"></span>
                                         </div>
-                                        <button type="button" class=" sendbtn rounded-pill p-3 m-2">Send</button>
-                                        <button type="button" class=" sendbtn rounded-pill ms-2 m-2">Validate</button>
-
-                                        <div class="mb-3  fw-bold fs-5">
-                                            <label for="email" class="form-label"> Email Address :</label>
-                                            <input type="email" placeholder="Email" class="form-control" id="email"
-                                                aria-describedby="emailHelp" required onkeyup="mail()">
-                                        </div>
-
-                                        <button type="submit" class="btn rounded-pill mt-5">Sign Up</button>
+                                        <button type="submit" class="btn rounded-pill mt-3">Sign Up</button>
                                     </form>
                                 </div>
                             </div>
@@ -131,6 +119,12 @@
                 </div>
             </div>
 
+            <div class="row mt-3">
+                <div class="col-md-12 text-center">
+                    <h5 style="font-weight: bolder; font-family: monotype corsiva; color:#09162b;">
+                       Please create strong password so please enter some alphabet and minimum 1 special character and number between 0-9</h5>
+                </div>
+            </div>
         </div>
 
 
