--- a/designesapp/templates/createaccount.html
+++ b/designesapp/templates/createaccount.html
@@ -108,6 +108,7 @@
                                         <div class="mb-3  fw-bold fs-5">
                                             <label for="name" class="form-label"> Create Password :</label>
                                             <input type="password" id="pass" placeholder="Create Password" class="form-control" onkeyup="pas()">
+                                             <h6 style="font-weight: bolder; font-family: monotype corsiva; color:#77a3e8;" class="mt-2">Please create strong password so please enter some alphabet and minimum 1 special character and minimum 1 number between 0-9</h6>
 		                                    <span id="sp2"></span>
                                         </div>
                                         <button type="submit" class="btn rounded-pill mt-3">Sign Up</button>
@@ -116,13 +117,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="row mt-3">
-                <div class="col-md-12 text-center">
-                    <h5 style="font-weight: bolder; font-family: monotype corsiva; color:#09162b;">
-                       Please create strong password so please enter some alphabet and minimum 1 special character and number between 0-9</h5>
                 </div>
             </div>
         </div>
