--- a/designesapp/templates/index.html
+++ b/designesapp/templates/index.html
@@ -189,12 +189,12 @@
     <!-- ===============================================================services end========================================================== -->
 
     <!-- ===========================================================portfolio start===================================================== -->
-
+ {% for i in show %}
     <div class="row">
       <div class="container">
         <div class="row portfolio">
           <div class="col-md-6 mt-5">
-            <a href="{% url 'nextpage' show.port_id=port_id %}"><img src="{{show.port_img.url}}" width="100%" alt=""></a>
+            <a href="{% url 'nextpage' port_id=i.port_id  %}"><img src="{{ i.port_img.url }}" width="100%" alt=""></a>
           </div>
           <div class="col-md-6">
             <div class="row mt-5">
@@ -245,7 +245,7 @@
         </div>
       </div>
     </div>
-
+    {% endfor %}
     <!-- ============================================================portfolio end====================================================== -->
 
     <!-- ========================================================Login start================================================================ -->
