--- a/designesapp/templates/nextpage.html
+++ b/designesapp/templates/nextpage.html
@@ -3,12 +3,12 @@
 {% block start %}
 {% load static %}
 <div class="container bg-light my-4 live-demo">
-    {% for i in show %}
     <div class="row">
         <div class="col-sm-8 p-3">
             <h3>Portfolio Name</h3>
+
             <span class="fs-3 text-warning">&starf;&starf;&starf;&star;&star;</span><br>
-            <div class="img mb-5" data-background-image="{{i.port_img.url}}">
+            <div class="img mb-5" style="background-image:  url('{{ show.port_img.url }}'); background-size:cover;background-repeat: no-repeat; height: 400px; width: 100%; border: 1px solid gray;box-shadow:1px 1px 10px #47b2e4;">
                 <div  class="img-hover">
                     <a href="#"><button class="btn btn-warning">Live Preview</button></a>
                 </div>
@@ -17,15 +17,14 @@
         </div>
         <div class="col-sm-4">
             <div class="all-buttons">
-                <a href="{{i.port_link}}"><button class="btn btn-warning"><i class="fa-solid fa-mountain-sun"></i> Live Preview</button></a>
-                <a href="{{i.port_zip.url}}" download ><button class="btn btn-primary"><i class="fa-solid fa-cloud-arrow-down"></i> Download</button></a>
+                <a href="{{show.port_link}}"><button class="btn btn-warning"><i class="fa-solid fa-mountain-sun"></i> Live Preview</button></a>
+                <a href="{{show.port_zip.url}}" download ><button class="btn btn-primary"><i class="fa-solid fa-cloud-arrow-down"></i> Download</button></a>
                 <a href=""><button class="btn btn-success"><i class="fa-solid fa-user-pen"></i> Edit</button></a>
                 <p class="mt-4">Design-Exhibition-Space provide easy download of various portfolios, Resumes, and Cards.
                 It faciitates effortless editing and provide edited code for downloading. </p>
             </div>
         </div>
     </div>
-    {% endfor %}
     <div class="row">
         <div class="col-sm-12">
             <p class="p-3">A responsive portfolio website is a personal or professional website designed to present an individual's skills, projects, resume, and contact information in a visually appealing and accessible way. The key feature of this portfolio is responsiveness—it automatically adapts its layout and design to different screen sizes, ensuring a smooth user experience on desktops, tablets, and mobile devices. <br>
