--- a/designesapp/templates/nextpage.html
+++ b/designesapp/templates/nextpage.html
@@ -8,9 +8,9 @@
             <h3>Portfolio Name</h3>
 
             <span class="fs-3 text-warning">&starf;&starf;&starf;&star;&star;</span><br>
-            <div class="img mb-5" style="background-image:  url('{{ show.port_img.url }}'); background-size:cover;background-repeat: no-repeat; height: 400px; width: 100%; border: 1px solid gray;box-shadow:1px 1px 10px #47b2e4;">
-                <div  class="img-hover">
-                    <a href="#"><button class="btn btn-warning">Live Preview</button></a>
+            <div class="img mb-5" style="background-image: url('{{ show.port_img.url }}'); background-size:cover;background-repeat: no-repeat;background-position: center; height: 400px; width: 100%; border: 1px solid gray;box-shadow:1px 1px 10px #47b2e4;">
+                <div  class="img-hover" style="height:400px;width: 100%;">
+                    <a href="{{show.port_link}}"><button class="btn btn-warning">Live Preview</button></a>
                 </div>
             </div>
             <h4>about protfolio</h4>
