--- a/designesapp/static/css/nextpage.css
+++ b/designesapp/static/css/nextpage.css
@@ -7,7 +7,7 @@
     text-transform: capitalize;
 }
 /* .img{
-    /* background-image:url("{{ show.port_img.url }}"); */
+    /* background-image:url("{{ show.port_img.url }}"); 
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -15,11 +15,11 @@
     width: 100%;
     border: 1px solid gray;
     box-shadow: 1px 1px 10px #47b2e4;
-} */
+} 
 .img-hover{
     height:400px;
     width: 100%;
-}
+ } */
 .img-hover a .btn{
     visibility: hidden;
     text-decoration: none;
@@ -29,6 +29,8 @@
     font-weight: bold;
 }
 .img-hover:hover{
+    height:400px;
+    width: 100%;
     background-color: #37517e9d;
 }
 .img-hover:hover .btn{
