--- a/designesapp/templates/nextpage3.html
+++ b/designesapp/templates/nextpage3.html
@@ -7,17 +7,17 @@
         <div class="col-sm-8 p-3">
             <h3>invitation card</h3>
             <span class="fs-3 text-warning">&starf;&starf;&starf;&star;&star;</span><br>
-            <div class="img mb-5">
-                <div  class="img-hover">
-                    <a href="#"><button class="btn btn-warning">Live Preview</button></a>
+            <div class="img mb-5" style="background-image: url('{{ show.card_img.url }}'); background-size:cover;background-repeat: no-repeat;background-position: center; height: 400px; width: 100%; border: 1px solid gray;box-shadow:1px 1px 10px #47b2e4;">
+                <div  class="img-hover" style="height:400px;width: 100%;">
+                    <a href="{{show.card_img.url}}"><button class="btn btn-warning">Live Preview</button></a>
                 </div>
             </div>
             <h4>about cards</h4>
         </div>
         <div class="col-sm-4">
             <div class="all-buttons">
-                <a href=""><button class="btn btn-warning"><i class="fa-solid fa-mountain-sun"></i> Live Preview</button></a>
-                <a href=""><button class="btn btn-primary"><i class="fa-solid fa-cloud-arrow-down"></i> Download</button></a>
+                <a href="{{show.card_img.url}}"><button class="btn btn-warning"><i class="fa-solid fa-mountain-sun"></i> Live Preview</button></a>
+                <a href="{{show.card_file}}"><button class="btn btn-primary"><i class="fa-solid fa-cloud-arrow-down"></i> Download</button></a>
                 <a href=""><button class="btn btn-success"><i class="fa-solid fa-user-pen"></i> Edit</button></a>
                 <p class="mt-4">Design-Exhibition-Space provide easy download of various portfolios, Resumes, and Cards.
                 It faciitates effortless editing and provide edited code for downloading. </p>
