--- a/designesapp/templates/card4.html
+++ b/designesapp/templates/card4.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
+
 <head>
   <meta charset="UTF-8">
   <title>Farewell Party Invitation</title>
@@ -8,7 +10,7 @@
 <body style="background-color:#000; display:flex; justify-content:center; align-items:center; height:100vh;">
 
   <div style="
-      background: url('img/card6.jpeg') no-repeat center center;
+      background: url('{% static "img/card6.jpeg" %}') no-repeat center center;
       background-size: cover;
       width: 700px;
       height: 900px;
@@ -30,16 +32,16 @@
     <p style="margin: 30px 0; font-size: 16px;">DINNER | DANCING | EATING | PARTYING</p>
 
     <div style="
-    border-top: 2px dotted #fff; 
-    border-bottom: 2px dotted #fff; 
-    padding: 20px 0; 
-    margin: 30px auto; 
-    width: 70%;
-">
-  <span style="margin: 0 15px; color: #f1c40f; font-weight: bold;">SATURDAY</span>
-  <span style="margin: 0 15px; color: #f1c40f; font-weight: bold;">JULY 27<sup>TH</sup></span>
-  <span style="margin: 0 15px; color: #f1c40f; font-weight: bold;">AT 7PM</span>
-</div>
+      border-top: 2px dotted #fff; 
+      border-bottom: 2px dotted #fff; 
+      padding: 20px 0; 
+      margin: 30px auto; 
+      width: 70%;
+    ">
+      <span style="margin: 0 15px; color: #f1c40f; font-weight: bold;">SATURDAY</span>
+      <span style="margin: 0 15px; color: #f1c40f; font-weight: bold;">JULY 27<sup>TH</sup></span>
+      <span style="margin: 0 15px; color: #f1c40f; font-weight: bold;">AT 7PM</span>
+    </div>
 
     <div style="font-size: 16px;">
       <p>PLEASE RSVP TO MARY BLUELOVE</p>
