--- a/designesapp/templates/card1.html
+++ b/designesapp/templates/card1.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
+
 <head>
   <meta charset="UTF-8">
   <title>Birthday Invitation</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
 </head>
-<body style="margin: 0; padding: 0;">
+
+<body style="margin: 0; padding: 0; display: flex; justify-content: center;">
 
   <div style="
-    background-image: url('img/card3.jpg');
+    background-image: url('{% static 'img/card3.jpg' %}');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
