--- a/designesapp/templates/index.html
+++ b/designesapp/templates/index.html
@@ -42,11 +42,11 @@
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#service">Services</a>
                       </li>
-                      <li class="nav-item"> 
+                      <!-- <li class="nav-item">  
                   <a class="nav-link active" aria-current="page" href="#template">Our Templates</a>
-                </li>
+                </li>-->
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Login</a>
+                        <a class="nav-link active" aria-current="page" href="#login">Login</a>
                       </li>
                     </ul>
                     <!-- <form class="d-flex" role="search"> 
@@ -193,9 +193,9 @@
     <div class="row">
       <div class="container">
         <div class="row about mt-5" id="template">
-          <div class="col-md-4 m-auto text-center">
+          <div class="col-md-2 m-auto text-center">
             <h1>
-              OUR TEMPLATES
+              PORTFOLIO
             </h1>
           </div>
         </div>
